--- a/src/app/(order)/cart/page.scss
+++ b/src/app/(order)/cart/page.scss
@@ -30,10 +30,10 @@
         }
         &:first-child {
           .icon {
-            color: $primary-color;
+            color: $primary-text-color;
           }
           h4 {
-            color: $primary-color;
+            color: $primary-text-color;
           }
         }
       }
