--- a/src/components/explore/index.scss
+++ b/src/components/explore/index.scss
@@ -18,7 +18,7 @@
         transform: scale(1.1);
       }
       p {
-        color: $primary-color;
+        color: $primary-text-color;
       }
     }
   }
