--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -9,7 +9,7 @@ footer {
   .link-item {
     transition: all linear 0.3s;
     &:hover {
-      color: $primary-color;
+      color: $primary-text-color;
     }
   }
 
