--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,4 @@
-$primary-color: #164194;
+$primary-text-color: #164194;
 $secondary-color: #f1f1f1;
 $tertiary-color: #fff;
 $quaternary-color: #000;
@@ -10,6 +10,7 @@ $hover-color: #2456b5;
 $primary-border-color: #cccccc;
 $secondary-border-color: #ececec;
 $tertiary-border-color: #e0e0e0;
+$quaternary-border-color: #164194;
 
 $primary-background-color: #164194;
 $secondary-background-color: #f1f1f1;
