--- a/src/app/(order)/checkout/page.scss
+++ b/src/app/(order)/checkout/page.scss
@@ -18,7 +18,7 @@
       }
       &--selected {
         position: relative;
-        color: $primary-color;
+        color: $primary-text-color;
 
         &::after {
           position: absolute;
