--- a/src/app/login/page.scss
+++ b/src/app/login/page.scss
@@ -10,7 +10,7 @@
 }
 .register-outline {
   background: transparent;
-  border: 1px solid $primary-color;
+  border: 1px solid $quaternary-border-color;
   color: black;
   transition: all linear 0.3s;
 
