--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -10,7 +10,7 @@
   }
 
   .sudo {
-    border: 1px solid $primary-color;
+    border: 1px solid $quaternary-border-color;
     margin: 0 5px;
   }
   .action-item {
@@ -61,7 +61,7 @@
       color: $tertiary-color;
     } */
     .product-title {
-      color: $primary-color;
+      color: $primary-text-color;
     }
   }
   .stock-out {
