--- a/src/components/list-card/index.scss
+++ b/src/components/list-card/index.scss
@@ -23,10 +23,10 @@
   .details {
     .review {
       svg {
-        color: $primary-color;
+        color: $primary-text-color;
       }
       span {
-        color: $primary-color;
+        color: $primary-text-color;
       }
     }
     .icon-title {
@@ -37,20 +37,20 @@
       transition: all linear 0.3s;
       &:hover {
         .icon-area {
-          border-color: $primary-color;
+          border-color: $quaternary-border-color;
         }
         svg {
-          color: $primary-color;
+          color: $primary-text-color;
         }
         p {
-          color: $primary-color;
+          color: $primary-text-color;
         }
       }
     }
   }
 
   .sudo {
-    border: 1px solid $primary-color;
+    border: 1px solid $quaternary-border-color;
     &:hover {
       background: $primary-background-color;
       color: $tertiary-color;
