--- a/src/components/outline-button/index.scss
+++ b/src/components/outline-button/index.scss
@@ -1,5 +1,5 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .outline-button {
-  border: 1px solid $primary-color;
+  border: 1px solid $quaternary-border-color;
 }
