--- a/src/components/service-card/index.scss
+++ b/src/components/service-card/index.scss
@@ -16,14 +16,14 @@
   .text {
     text-align: left;
     h4 {
-      color: $primary-color;
+      color: $primary-text-color;
     }
     h6 {
       color: $quaternary-color;
     }
   }
   &:hover {
-    border: 1px solid $primary-color;
+    border: 1px solid $quaternary-border-color;
   }
 }
 
