--- a/src/components/status-button/index.scss
+++ b/src/components/status-button/index.scss
@@ -8,7 +8,7 @@
   cursor: pointer;
   position: relative;
   &.checked {
-    background-color: $primary-color;
+    background-color: $primary-background-color;
   }
 }
 
