--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -45,7 +45,7 @@
         }
 
         td {
-          border: 1px solid $undecenary-color;
+          border: 1px solid$tertiary-border-color;
           border-top: 0;
         }
         .icons {
