transfer variable color code with sass

--- a/src/app/(Blogs)/blogs/[slug]/page.scss
+++ b/src/app/(Blogs)/blogs/[slug]/page.scss
@@ -19,14 +19,14 @@
     background: transparent;
 
     svg {
-      color: $quaternary-color;
+      color: $quaternary-text-color;
     }
 
     &:hover {
       background: $primary-background-color;
 
       svg {
-        color: $tertiary-color;
+        color: $tertiary-text-color;
       }
     }
   }
