--- a/src/app/profile/page.scss
+++ b/src/app/profile/page.scss
@@ -1,11 +1,11 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .profile {
   padding-top: 80px;
   padding-bottom: 80px;
 }
 .table-border {
-  border-top: 1px solid $secondary-color;
+  border-top: 1px solid $quinary-border-color;
 }
 .sidebar {
   .items {
