--- a/src/components/box/index.scss
+++ b/src/components/box/index.scss
@@ -10,7 +10,7 @@
       width: 20px;
       height: 20px;
       background: $primary-background-color;
-      color: $tertiary-color;
+      color: $tertiary-text-color;
       display: flex;
       justify-content: center;
       align-items: center;
