--- a/src/components/button/index.scss
+++ b/src/components/button/index.scss
@@ -2,7 +2,7 @@
 
 .button {
   background: $primary-background-color;
-  color: $tertiary-color;
+  color: $tertiary-text-color;
   border: 0;
   transition: all linear 0.3s;
 
