--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -7,7 +7,7 @@
     background: $tertiary-border-color;
   }
   .absolute-item {
-    background: $hexary-color;
+    background: $hexary-background-color;
   }
   .search-input {
     border: 1px solid $primary-border-color;
