--- a/src/components/question-ans/index.scss
+++ b/src/components/question-ans/index.scss
@@ -7,11 +7,11 @@
     background: $primary-background-color;
 
     .icon {
-      color: $tertiary-color;
+      color: $tertiary-text-color;
     }
 
     h3 {
-      color: $tertiary-color;
+      color: $tertiary-text-color;
     }
   }
   .answer {
