--- a/src/components/service-card/index.scss
+++ b/src/components/service-card/index.scss
@@ -19,7 +19,7 @@
       color: $primary-text-color;
     }
     h6 {
-      color: $quaternary-color;
+      color: $quaternary-text-color;
     }
   }
   &:hover {
