--- a/src/components/textarea/index.scss
+++ b/src/components/textarea/index.scss
@@ -10,7 +10,7 @@
       font-style: italic;
     }
     &:focus-visible {
-      outline: $primary-border-color;
+      outline: $primary-outline-color;
     }
   }
 }
