--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,18 +1,26 @@
 $primary-text-color: #164194;
-$secondary-color: #f1f1f1;
-$tertiary-color: #fff;
-$quaternary-color: #000;
-$quinary-color: #d6d6d6;
-$hexary-color: #ff0000;
+$secondary-text-color: #f1f1f1;
+$tertiary-text-color: #fff;
+$quaternary-text-color: #000;
+$quinary-text-color: #d6d6d6;
+$hexary-text-color: #ff0000;
 
 $hover-color: #2456b5;
 
 $primary-border-color: #cccccc;
 $secondary-border-color: #ececec;
-$tertiary-border-color: #e0e0e0;
+$tertiary-border-color: #e0e0e0; // Need organized
 $quaternary-border-color: #164194;
+$quinary-border-color: #f1f1f1;
+$hexary-border-color: #000;
+$septenary-border-color: #d6d6d6;
 
 $primary-background-color: #164194;
 $secondary-background-color: #f1f1f1;
 $tertiary-background-color: #fff;
 $quaternary-background-color: #f9f9f9;
+$quinary-background-color: #d6d6d6;
+$hexary-background-color: #ff0000;
+$septenary-background-color: #cccccc;
+
+$primary-outline-color: #cccccc;
