--- a/src/app/(Blogs)/blogs/loading.scss
+++ b/src/app/(Blogs)/blogs/loading.scss
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: $tertiary-color;
+  background-color: $tertiary-text-color;
 }
 
 .loadingSpinner {
