--- a/src/app/(category)/category/[slug]/page.scss
+++ b/src/app/(category)/category/[slug]/page.scss
@@ -45,7 +45,7 @@
   width: 75px;
   height: 20px;
   text-align: center;
-  border: 1px solid $quaternary-color;
+  border: 1px solid $hexary-border-color;
   padding: 4px;
   &:focus-visible {
     outline: none;
@@ -63,7 +63,7 @@
     background: $tertiary-background-color;
 
     .icon {
-      color: $quaternary-color;
+      color: $quaternary-text-color;
     }
   }
   .action {
@@ -74,7 +74,7 @@
 }
 
 .filter-products {
-  border-bottom: 1px solid $secondary-color;
+  border-bottom: 1px solid $quinary-border-color;
   .product-card {
     border-right: 1px solid $primary-border-color;
     &:nth-child(4n) {
