--- a/src/app/(order)/cart/page.scss
+++ b/src/app/(order)/cart/page.scss
@@ -4,7 +4,7 @@
   padding-bottom: 80px;
 
   .direction-area {
-    border: 1px solid $quinary-color;
+    border: 1px solid $septenary-border-color;
     padding: 20px 42px;
 
     .item-wrapper {
@@ -43,10 +43,10 @@
   .cart-elements {
     margin-top: 30px;
     .product-title {
-      border-bottom: 1px solid $quinary-color;
+      border-bottom: 1px solid $septenary-border-color;
       padding-bottom: 6px;
       .dot-icon {
-        color: $quinary-color;
+        color: $quinary-text-color;
       }
     }
 
@@ -77,10 +77,10 @@
   }
 
   .cart-summery {
-    border: 1px solid $quinary-color;
+    border: 1px solid $septenary-border-color;
 
     .summery-border {
-      border-bottom: 1px solid $quinary-color;
+      border-bottom: 1px solid $septenary-border-color;
     }
   }
 }
@@ -89,12 +89,12 @@
   background: $primary-background-color;
   margin-bottom: 80px;
   .service-card {
-    color: $tertiary-color;
+    color: $tertiary-text-color;
     h4 {
-      color: $tertiary-color !important;
+      color: $tertiary-text-color !important;
     }
     h6 {
-      color: $tertiary-color !important;
+      color: $tertiary-text-color !important;
     }
   }
 }
