--- a/src/app/login/page.scss
+++ b/src/app/login/page.scss
@@ -16,7 +16,7 @@
 
   &:hover {
     background: $primary-background-color;
-    color: $tertiary-color;
+    color: $tertiary-text-color;
   }
 }
 
@@ -24,7 +24,7 @@
   box-shadow: $primary-shadow;
 }
 .warning {
-  color: $hexary-color;
+  color: $hexary-text-color;
 }
 @media screen and (max-width: 768px) {
   .login-page {
