--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -10,7 +10,7 @@
   border-bottom: 1px solid $primary-border-color;
 
   h2 {
-    color: $quaternary-color;
+    color: $quaternary-text-color;
   }
   @media screen and (max-width: 768) {
     margin-top: 50px;
