--- a/src/app/profile/ticket/page.scss
+++ b/src/app/profile/ticket/page.scss
@@ -16,7 +16,7 @@
         background: $secondary-background-color;
       }
       td {
-        border-right: 1px solid $secondary-color;
+        border-right: 1px solid $quinary-border-color;
         &:last-child {
           border: 0;
         }
