--- a/src/app/videos/loading.scss
+++ b/src/app/videos/loading.scss
@@ -1,16 +1,18 @@
+@import "../../styles/index.scss";
+
 .loadingContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #fff; /* Background color for the loading screen */
+  background-color: $tertiary-background-color;
 }
 
 .loadingSpinner {
   border: 4px solid rgba(255, 255, 255, 0.3);
   border-radius: 50%;
-  border-top: 4px solid #164194; /* Color of the loading spinner */
+  border-top: 4px solid $quaternary-border-color;
   width: 40px;
   height: 40px;
   animation: spin 1s linear infinite;
