--- a/src/components/emi-popup/index.scss
+++ b/src/components/emi-popup/index.scss
@@ -13,7 +13,7 @@
     margin: 40px auto;
     padding: 30px;
     height: 85%;
-    background: #fff;
+    background: $tertiary-background-color;
     z-index: 10;
     display: flex;
     justify-content: center;
