--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -2,7 +2,7 @@
 
 footer {
   padding-top: 40px;
-  border-top: 1px solid #cccccc;
+  border-top: 1px solid $primary-border-color;
 
   background: $tertiary-background-color;
 
