--- a/src/components/zoom-image/index.scss
+++ b/src/components/zoom-image/index.scss
@@ -1,6 +1,8 @@
+@import "../../styles/index.scss";
+
 .gallery-img {
   width: 100%;
-  border: 10px solid #000;
+  border: 10px solid $hexary-border-color;
   margin: 5px auto;
   opacity: 0.9;
   transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
