--- a/src/styles/_reset.scss
+++ b/src/styles/_reset.scss
@@ -3,7 +3,7 @@
   padding: 0;
 }
 body {
-  background-color: $tertiary-color;
+  background-color: $tertiary-background-color;
   scroll-behavior: smooth;
   font-family: "Open Sans", sans-serif;
 }
