--- a/src/app/emi/page.scss
+++ b/src/app/emi/page.scss
@@ -4,10 +4,41 @@
   padding-bottom: 80px;
 
   .emi-table {
-    border: 1px solid $primary-border-color;
+    box-shadow: 0px 0px 15px 3px rgba(0, 0, 0, 0.05);
 
-    .border-color {
-      border-color: $primary-border-color;
+    table {
+      border: 1px solid $septenary-border-color;
+    }
+
+    .table-heading {
+      background: $secondary-background-color;
+    }
+    tbody {
+      tr {
+        transition: all linear 0.3s;
+        &:nth-child(even) {
+          background: $quaternary-background-color;
+        }
+        &:hover {
+          background: $secondary-background-color;
+        }
+        td {
+          border-right: 1px solid $quinary-border-color;
+        }
+        .info-icons {
+          svg {
+            border: 1px solid $primary-border-color;
+            font-size: 20px;
+            padding: 2px;
+            border-radius: 50%;
+            transition: all linear 0.3s;
+            &:hover {
+              background: $hover-color;
+              color: $tertiary-text-color;
+            }
+          }
+        }
+      }
     }
   }
 }
