--- a/src/components/popup/index.scss
+++ b/src/components/popup/index.scss
@@ -11,6 +11,7 @@
   justify-content: center;
   align-items: center;
   padding: 10px 25px;
+  z-index: 1;
 
   .popup-content {
     position: relative;
