--- a/src/app/faq/page.scss
+++ b/src/app/faq/page.scss
@@ -1,6 +1,12 @@
-@import '../../styles/index.scss';
+@import "../../styles/index.scss";
 
 .faq {
   padding-top: 80px;
   padding-bottom: 80px;
+  .icon {
+    font-size: 20px;
+  }
+  .disable {
+    color: $secondary-text-color;
+  }
 }
