--- a/src/components/invoice/index.scss
+++ b/src/components/invoice/index.scss
@@ -1,6 +1,7 @@
 @import "../../styles/index.scss";
 
 .invoice {
+  position: relative;
   .product-a {
     height: 100px;
   }
@@ -97,6 +98,14 @@
         height: 40px;
       }
     }
+  }
+  
+  .invoice-footer{
+    // background-color: red;
+    // position: absolute;
+    // bottom: 0;
+    // left: 0;
+    // right: 0;
   }
 }
 @media print {
