--- a/src/components/megamenu/index.scss
+++ b/src/components/megamenu/index.scss
@@ -1,5 +1,14 @@
 @import "../../styles/index.scss";
 
+.sticky-nav{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 999;
+  background: #fff;
+  margin-bottom: 54px;
+}
 .heading {
   .mega-arrow {
     position: absolute;
