--- a/src/components/invoice/index.scss
+++ b/src/components/invoice/index.scss
@@ -118,3 +118,16 @@
   min-height: 78vh;
   height: 100%;
 }
+.payment-status{
+  position: absolute;
+  bottom: .5rem;
+  left: 2rem;
+  .img-sec{
+    img{
+      width: 120px;
+      height: 120px;
+      max-width: 100%;
+      max-height: 100%;
+    }
+  }
+}
