change color and other as require

--- a/src/app/page.scss
+++ b/src/app/page.scss
@@ -31,7 +31,7 @@
       }
       &--selected {
         color: $primary-text-color;
-        border-bottom: 3px solid $quaternary-border-color;
+        border-bottom: 3px solid $hover-color;
       }
     }
   }
