--- a/src/components/box/index.scss
+++ b/src/components/box/index.scss
@@ -5,7 +5,7 @@
   .header {
     padding: 10px 20px;
     border-bottom: 1px solid $primary-border-color;
-    color: $primary-text-color;
+    color: $hover-color;
     .step {
       width: 20px;
       height: 20px;
