--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -10,8 +10,11 @@
   }
 
   .sudo {
-    border: 1px solid $quaternary-border-color;
+    border: 1px solid $primary-text-color;
     margin: 0 5px;
+    &:hover {
+      border: 1px solid $border-color;
+    }
   }
   .action-item {
     color: #707070;
@@ -24,6 +27,9 @@
   }
   .product-title {
     transition: all linear 0.3s;
+    &:hover {
+      color: #414141;
+    }
   }
   .discount {
     transition: all linear 0.3s;
