--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,11 +1,11 @@
-$primary-text-color: #164194;
+$primary-text-color: #252022;
 $secondary-text-color: #f1f1f1;
 $tertiary-text-color: #fff;
 $quaternary-text-color: #000;
 $quinary-text-color: #d6d6d6;
 $hexary-text-color: #ff0000;
 
-$hover-color: #2456b5;
+$hover-color: #E30513;
 
 $primary-border-color: #cccccc;
 $secondary-border-color: #ececec;
@@ -14,8 +14,9 @@ $quaternary-border-color: #164194;
 $quinary-border-color: #f1f1f1;
 $hexary-border-color: #000;
 $septenary-border-color: #d6d6d6;
+$border-color:#E30513;
 
-$primary-background-color: #164194;
+$primary-background-color: #E30513;
 $secondary-background-color: #f1f1f1;
 $tertiary-background-color: #fff;
 $quaternary-background-color: #f9f9f9;
@@ -24,3 +25,4 @@ $hexary-background-color: #ff0000;
 $septenary-background-color: #cccccc;
 
 $primary-outline-color: #cccccc;
+
