--- a/src/components/explore/index.scss
+++ b/src/components/explore/index.scss
@@ -10,7 +10,7 @@
       transition: all linear 0.3s;
     }
     p {
-      color: $quaternary-text-color;
+      color: $primary-text-color;
       transition: all linear 0.3s;
     }
     &:hover {
@@ -18,7 +18,8 @@
         transform: scale(1.1);
       }
       p {
-        color: $primary-text-color;
+        color: $hover-color;
+       
       }
     }
   }
