design changes in nav, invoice and many more

--- a/src/components/invoice/index.scss
+++ b/src/components/invoice/index.scss
@@ -12,9 +12,10 @@
   padding: 40px;
 
   .invoice-header {
-    margin-top: 30px;
+    
     padding: 10px 0;
     .title {
+      margin-bottom: 20px;
       display: flex;
       justify-content: space-between;
     }
