--- a/src/components/title/index.scss
+++ b/src/components/title/index.scss
@@ -5,9 +5,7 @@
 }
 
 .capital{
-  text-transform: uppercase;
-  // text-transform: lowercase;
-  // text-transform: capitalize !important;
+  text-transform: capitalize !important;
 }
 
 .view {
