--- a/src/components/navbar/index.scss
+++ b/src/components/navbar/index.scss
@@ -1,5 +1,14 @@
 @import "../../styles/index.scss";
 
+.sticky-nav{
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 50;
+  background: #fff;
+}
+
 .navbar {
   background-color: $quaternary-background-color;
 
