search in navbar for mobile, and some other design changes

--- a/src/app/(product)/product/[slug]/page.scss
+++ b/src/app/(product)/product/[slug]/page.scss
@@ -82,7 +82,7 @@
     font-size: 12px;
     margin-left: 16px;
     font-family: $secondary-font;
-    padding: 3px;
+    padding: 5px;
   }
 
   .e-emi {
@@ -198,5 +198,5 @@
 }
 
 .outline-hidden{
-  border: none !important;
+  border: none ;
 }
