--- a/src/components/card/index.scss
+++ b/src/components/card/index.scss
@@ -19,6 +19,11 @@
   .action-item {
     color: #707070;
   }
+  .action-item-hover{
+   &:hover{
+    color: $hover-color;
+   }
+  }
   .feature {
     transform: translateX(20px);
     opacity: 0;
