--- a/src/app/(order)/cart/page.scss
+++ b/src/app/(order)/cart/page.scss
@@ -18,7 +18,7 @@
         left: 0;
         width: 100%;
         height: 5px;
-        background: url("/assets/images/line/line.jpg") no-repeat center;
+        background: url("/assets/images/line/line.png") no-repeat center;
         background-size: cover;
       }
       .item {
