mobile responsiveness updated

--- a/src/components/custom-dropdown-location/index.scss
+++ b/src/components/custom-dropdown-location/index.scss
@@ -1,6 +1,7 @@
 .custom-dropdown {
     position: relative;
     width: 100%;
+    height: auto;
     margin-top: 4px;
     .dropdown-header {
       background-color: #f9fafb;
