--- a/src/components/zoom-image/index.scss
+++ b/src/components/zoom-image/index.scss
@@ -2,6 +2,7 @@
 
 .gallery-img {
   width: 100%;
+  height: auto;
   border: 10px solid $hexary-border-color;
   margin: 5px auto;
   opacity: 0.9;
@@ -12,5 +13,6 @@
   }
   @media all and (min-width: 768px) {
     width: calc(50% - 10px);
+    height: 320px;
   }
 }
