--- a/src/components/list-card/index.scss
+++ b/src/components/list-card/index.scss
@@ -14,10 +14,20 @@
   .icon-area {
     border: 1px solid $hexary-border-color;
     border-radius: 50%;
-    /* 
-    .icon {
-      // color: $ash-color;
-    } */
+    transition: all linear 0.3s;
+  
+    &:hover {
+    background: $hover-color;
+    border: 1px solid $hover-color;
+    color: $tertiary-text-color;
+    }
+  }
+  .icon {
+    transition: all linear 0.3s;
+    
+    &:hover {
+    color: white;
+    }
   }
 
   .details {
@@ -36,9 +46,6 @@
     .interaction {
       transition: all linear 0.3s;
       &:hover {
-        .icon-area {
-          border-color: $quaternary-border-color;
-        }
         svg {
           color: $primary-text-color;
         }
@@ -49,30 +56,43 @@
     }
   }
 
-  .sudo {
-    border: 1px solid $quaternary-border-color;
-    &:hover {
-      background: $primary-background-color;
-      color: $tertiary-text-color;
-    }
-    margin-right: 5px;
-  }
   .stock {
     border-bottom: 2px solid #e0e0e0;
   }
   .save-money {
     color: $tertiary-text-color;
   }
-  .product-btn {
-    transition: all linear 0.3s;
-    &:hover {
-      background: $hover-color;
-    }
-  }
+
   .stock-out {
     background: #92989d;
     &:hover {
       background: #92989d;
     }
+  }
+}
+
+.discount {
+  transition: all linear 0.3s;
+
+  &:hover {
+    background: $primary-background-color;
+    color: $tertiary-text-color;
+    cursor: pointer;
+  }
+}
+.new {
+  transition: all linear 0.3s;
+
+  &:hover {
+    background: $primary-background-color;
+    color: $tertiary-text-color;
+    cursor: pointer;
+  }
+}
+.sudo {
+  border: 1px solid $primary-text-color;
+  margin: 0 5px;
+  &:hover {
+    border: 1px solid $border-color;
   }
 }
