campaign and other changes added

--- a/src/app/compare/page.scss
+++ b/src/app/compare/page.scss
@@ -63,7 +63,7 @@
   }
   .discount {
     color: $tertiary-text-color;
-    background: $hexary-background-color;
+    background: $primary-background-color;
   }
 }
 .stock-out {
