--- a/src/components/custom-dropdown-location/index.scss
+++ b/src/components/custom-dropdown-location/index.scss
@@ -14,7 +14,7 @@
       font-size: 0.875rem;
       color: #1f2937;
       &:hover {
-        border-color: #E30513;
+        border-color: #524096;
       }
     }
     .arrow {
@@ -37,12 +37,12 @@
         padding: 7px 5px;
       cursor: pointer;
       &:hover {
-        background-color: #E30513;
+        background-color: #524096;
         color: white;
       }
     }
     .open {
-      border-color: #E30513;
+      border-color: #524096;
     }
   }
   
