--- a/src/components/explore/index.scss
+++ b/src/components/explore/index.scss
@@ -10,7 +10,7 @@
       transition: all linear 0.3s;
     }
     p {
-      color: $primary-text-color;
+      color: $text-color;
       transition: all linear 0.3s;
     }
     &:hover {
