--- a/src/components/service-card/index.scss
+++ b/src/components/service-card/index.scss
@@ -14,7 +14,7 @@
   .text {
     text-align: left;
     h4 {
-      color: $primary-text-color;
+      color: $hexary-border-color;
     }
     h6 {
       color: $quaternary-text-color;
