--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,11 +1,12 @@
-$primary-text-color: #252022;
+$text-color: #1a1a1a;
+$primary-text-color: #97627d;
 $secondary-text-color: #f1f1f1;
 $tertiary-text-color: #fff;
 $quaternary-text-color: #000;
 $quinary-text-color: #d6d6d6;
 $hexary-text-color: #ff0000;
 
-$hover-color: #E30513;
+$hover-color: #524096;
 
 $primary-border-color: #cccccc;
 $secondary-border-color: #ececec;
@@ -14,9 +15,9 @@ $quaternary-border-color: #164194;
 $quinary-border-color: #f1f1f1;
 $hexary-border-color: #000;
 $septenary-border-color: #d6d6d6;
-$border-color:#E30513;
+$border-color:#524096;
 
-$primary-background-color: #E30513;
+$primary-background-color: #97627d;
 $secondary-background-color: #f1f1f1;
 $tertiary-background-color: #fff;
 $quaternary-background-color: #f9f9f9;
