--- a/src/app/(product)/product/[slug]/page.scss
+++ b/src/app/(product)/product/[slug]/page.scss
@@ -77,7 +77,7 @@
     color: #707070;
   }
   .discount {
-    background: $hexary-background-color;
+    background: $primary-background-color;
     color: $tertiary-text-color;
     font-size: 12px;
     margin-left: 16px;
