--- a/src/app/(product)/product/[slug]/page.scss
+++ b/src/app/(product)/product/[slug]/page.scss
@@ -208,3 +208,242 @@
     background: #92989d;
   }
 }
+@import "../../../../styles/index.scss";
+
+.product-details {
+  border-top: 1px solid $secondary-border-color;
+  border-bottom: 1px solid $secondary-border-color;
+  padding-bottom: 20px;
+
+  .pointer {
+    &:hover {
+      cursor: pointer;
+    }
+  }
+
+  /* svg {
+    width: 15px;
+    height: 15px;
+  } */
+  .award {
+    width: 25px;
+    height: 20px;
+  }
+  .product-item {
+    height: 100px;
+    padding: 4px;
+    img {
+      border: 1px solid $secondary-border-color;
+      height: 90%;
+      object-fit: cover;
+    }
+    &:focus-visible {
+      outline: none;
+    }
+  }
+
+  .view-image {
+    border: 1px solid $secondary-border-color;
+  }
+
+  .slick-arrow {
+    height: 35px;
+    width: 35px;
+  }
+
+  .slick-prev {
+    left: -30px;
+    color: $tertiary-border-color;
+    &:hover {
+      color: $secondary-text-color;
+    }
+  }
+
+  .slick-next {
+    right: -35px;
+    color: $tertiary-border-color;
+    margin-left: 30px;
+    &:hover {
+      color: $secondary-text-color;
+    }
+  }
+
+  .price-area {
+    border-top: 1px solid $secondary-border-color;
+    border-bottom: 1px solid $secondary-border-color;
+  }
+  .share-item {
+    .share-popup {
+      opacity: 0;
+      transition: all linear 0.3s;
+    }
+    &:hover {
+      .share-popup {
+        opacity: 1;
+      }
+    }
+  }
+  .r-price {
+    color: #707070;
+  }
+  .discount {
+    background: $hexary-background-color;
+    color: $tertiary-text-color;
+    font-size: 12px;
+    margin-left: 16px;
+    font-family: $secondary-font;
+    padding: 5px;
+  }
+
+  .e-emi {
+    border-bottom: 1px solid $secondary-border-color;
+  }
+  .action {
+    .quantity {
+      width: 33px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100%;
+      transition: all linear 0.3s;
+    }
+  }
+}
+.related-products {
+  .product-card {
+    border-right: 1px solid $primary-border-color;
+  }
+  &:last-child {
+    border-color: transparent;
+  }
+}
+.more-details {
+  border-bottom: 1px solid $secondary-border-color;
+  overflow-x: hidden;
+  .description {
+    .desc {
+      margin-top: 30px;
+      // border: 1px solid $primary-border-color;
+      box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.1);
+      .react-tabs__tab-list {
+        display: flex;
+        background: $secondary-background-color;
+        font-family: $primary-font;
+        font-size: 20px;
+        font-weight: 700;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.1);
+      }
+      .react-tabs__tab {
+        cursor: pointer;
+        padding: 8px 30px;
+        font-family: "Gotham";
+        font-weight: 700;
+        border-right: 1px solid $tertiary-text-color;
+        font-size: 15px;
+
+        &--selected {
+          color: $primary-text-color;
+          position: relative;
+          &::after {
+            position: absolute;
+            content: "";
+            bottom: 0;
+            left: 0;
+            width: 100%;
+            height: 2px;
+            background: $primary-background-color;
+          }
+        }
+        &:focus-visible {
+          outline: none;
+        }
+        @media screen and (max-width: 768px) {
+          font-size: 12px;
+          padding: 6px 13px;
+        }
+      }
+
+      .tab-panel {
+        padding: 12px;
+        .specification {
+          font-family: "Gotham";
+          font-size: 12px;
+          font-weight: 400;
+        }
+        .review {
+          .all-reviews {
+            svg {
+              color: $primary-text-color;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.attribute {
+  border-bottom: 1px solid $quinary-border-color;
+
+  .select {
+    border: 1px solid $quaternary-text-color;
+    transition: all linear 0.3s;
+    &:hover {
+      border: 1px solid $hover-color;
+      background: $primary-background-color;
+      color: $tertiary-text-color;
+    }
+    &.disabled-attribute {
+      border: 1px solid $primary-border-color;
+      color: $quinary-text-color;
+      &:hover {
+        background: transparent;
+        cursor: not-allowed;
+      }
+    }
+  }
+  .selected {
+    border: 1px solid $hover-color;
+    background: $primary-background-color;
+    color: $tertiary-text-color;
+  }
+}
+
+.outline-hidden{
+  border: none ;
+}
+.stock-out {
+  background: #92989d;
+  &:hover {
+    background: #92989d;
+  }
+}
+.video-placeholder {
+  position: relative;
+  cursor: pointer;
+
+  .play-button-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .play-button {
+    font-size: 64px;
+    background: none;
+    border: none;
+    color: white;
+    cursor: pointer;
+    outline: none;
+  }
+}
+
+.no-thumbnail-placeholder {
+  background-color: #f0f0f0;
+}
