--- a/src/components/video-card/index.scss
+++ b/src/components/video-card/index.scss
@@ -6,3 +6,47 @@
     width: 100%;
   }
 }
+.video-card {
+  position: relative;
+  
+  .video-placeholder {
+    position: relative;
+    cursor: pointer;
+    
+    .video-thumbnail {
+      display: block;
+      width: 100%;
+      height: 200px;
+    }
+
+    .no-thumbnail-placeholder {
+      background-color: #f0f0f0; /* Placeholder background */
+      width: 100%;
+      height: 200px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+    
+    .play-button-overlay {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: rgba(0, 0, 0, 0.5);
+    }
+
+    .play-button {
+      font-size: 50px;
+      color: white;
+      background: none;
+      border: none;
+      cursor: pointer;
+      outline: none;
+    }
+  }
+}
